@startuml
title Virtual Zoo - UML Class Diagram

skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

package "zoo" {
  class VirtualZoo {
    - animals: List<animal.Animal>
    + VirtualZoo(animals: List<animal.Animal>)
    + VirtualZoo()
    + addAnimal(animal: animal.Animal)
    + createIterator(): iterator.Iterator
  }
}

package UI {
    class RenderableAnimal {
        - animal: animal.Animal
        - x: int
        - y: int
        - image: BufferedImage
        - isHighlighted: boolean
    }

    class Application {
        - zoo: zoo.VirtualZoo
        - zooPanel: UI.ZooPanel
        - iterateAnimalsOnButtonPress: iterator.Iterator<RenderableAnimal>
    }

    class ZooPanel {
        renderableAnimals: List<UI.RenderableAnimal>
        + paintComponent(g: Graphics)
        + createIterator() iterator.Iterator<RenderableAnimal>
    }
}

package "animal" {
  abstract class Animal {
    - name: String
    - age: int
    - hunger: int
    - mood: String
    - health: int
    - type: String
    - species: String

    +accept(visitor: visitor.Visitor)
  }
  class Mammal {
      +accept(visitor: visitor.Visitor)
  }
  class Bird {
      +accept(visitor: visitor.Visitor)
  }
  class Reptile {
      +accept(visitor: visitor.Visitor)
  }
}

package "iterator" {
  interface Aggregate {
    createIterator(): Iterator<T>
  }
  interface Iterator {
    hasNext(): boolean
    next(): T
  }
  class AnimalIterator {
    - animals: List<animal.Animal>
    - position: int
    + AnimalIterator(animals: List<animal.Animal>)
    + hasNext(): boolean
    + next(): animal.Animal
  }
  class RenderableAnimalIterator {
    - renderableAnimals: List<UI.RenderableAnimal>
    - position: int
    + RenderableAnimalIterator(animals: List<animal.Animal>)
    + hasNext(): boolean
    + next(): animal.Animal
  }
}

package "visitor" {
  interface Visitor {
    + visitReptile(reptile: animal.Reptile)
    + visitBird(bird: animal.Bird)
    + visitMammal(mammal: animal.Mammal)
  }
  package "concretevisitor" {
    class FeedingVisitor
    class MedicalVisitor
    class ReportVisitor
  }
}

zoo.VirtualZoo ..|> iterator.Aggregate
zoo.VirtualZoo ..> animal.Animal : uses
zoo.VirtualZoo ..> iterator.AnimalIterator : creates
iterator.AnimalIterator ..|> iterator.Iterator

animal.Mammal --|> animal.Animal
animal.Bird --|> animal.Animal
animal.Reptile --|> animal.Animal

animal.Animal ..> visitor.Visitor : accept(visitor)
visitor.concretevisitor.FeedingVisitor ..|> visitor.Visitor
visitor.concretevisitor.MedicalVisitor ..|> visitor.Visitor
visitor.concretevisitor.ReportVisitor ..|> visitor.Visitor

UI.ZooPanel ..|> iterator.Aggregate
ZooPanel ..> iterator.RenderableAnimalIterator : creates
iterator.RenderableAnimalIterator ..|> iterator.Iterator


@enduml
